<resources>
    <string name="app_name">AirlineApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="search_fragment_label">Search Results</string>


    <!-- Airline resources -->
    <string name="readme_fragment_label">README</string>
    <string name="readme">Alexis Murauskas - CS410J - Winter2020 - Project6\n
            Airline Android Application\n\n
            Usage:\nadd and view collections of airlines and associated flights\n\n
            A new airline contains the following information:\n\n
            Name - the name of the airline\n
            Flight Number - the flight identifier\n
            Source - three-letter code of departure airport\n
            Departs - departure date (m/d/yyyy) and time (h:mm am/pm)\n
            Destination - three-letter code of arrival airport\n
            Arrives - arrival date (m/d/yyyy) and time (h:mm am/pm)\n
    </string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="source_airport">Source Airport</string>
    <string name="destination_airport">Destination Airport</string>
    <string name="required_airline_name">Required: Airline Name</string>
    <string name="close_readme">Close ReadMe</string>
    <string name="add_new_airline">Add new airline</string>
    <string name="flight_number">Flight Number</string>
    <string name="departure_m_d_yy_h_mm_am_pm">Departure (m/d/yy h:mm am/pm)</string>
    <string name="arrival_m_d_yy_h_mm_am_pm">Arrival (m/d/yy h:mm am/pm)</string>
    <string name="add_fragment_label">AddFragment</string>
    <string name="airline_name">Airline name</string>
    <string name="no_results">No results</string>
</resources>
