<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/textinput_airline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/airline_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textinput_flight_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flight_number"
        app:layout_constraintTop_toBottomOf="@id/textinput_airline" />

    <EditText
        android:id="@+id/textinput_src"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/source_airport"
        app:layout_constraintTop_toBottomOf="@id/textinput_flight_number" />

    <EditText
        android:id="@+id/textinput_depart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure_m_d_yy_h_mm_am_pm"
        app:layout_constraintTop_toBottomOf="@id/textinput_src" />

    <EditText
        android:id="@+id/textinput_dest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_airport"
        app:layout_constraintTop_toBottomOf="@id/textinput_depart" />

    <EditText
        android:id="@+id/textinput_arrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arrival_m_d_yy_h_mm_am_pm"
        app:layout_constraintTop_toBottomOf="@id/textinput_dest" />

    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="onAddButtonClick"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@id/textinput_arrive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>