<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="edu.pdx.cs410j.alm9.airline.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_SearchFragment"
            app:destination="@id/SearchFragment"/>
        <action
            android:id="@+id/action_HomeFragment_to_AddFragment"
            app:destination="@id/AddFragment"/>
    </fragment>

    <fragment
        android:id="@+id/SearchFragment"
        android:name="edu.pdx.cs410j.alm9.airline.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_SearchFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"/>
    </fragment>

    <fragment
        android:id="@+id/AddFragment"
        android:name="edu.pdx.cs410j.alm9.airline.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fragment_add">

        <action
            android:id="@+id/action_AddFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"/>
    </fragment>
</navigation>
